fixing top spacing

--- a/main.scss
+++ b/main.scss
@@ -72,7 +72,7 @@ html, body {
 			@media only screen and (min-width: 768px) {
 				padding: 19%;
 				padding-bottom: 15%;
-				padding-top: 5%;
+				padding-top: 7%;
 			}
 
 			.title-logo {
